@@ -12,8 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<easybuggy-port>8080</easybuggy-port>
 		<!-- default properties (JDK 1.7 or earlier) -->
-		<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
-		<jvm.args.gc.log.path>-Xlog:gc:logs/gc.log</jvm.args.gc.log.path>
+		<jvm.args.perm.size>-XX:MaxPermSize=128m</jvm.args.perm.size>
+		<jvm.args.gc.log.path>-Xloggc:logs/gc.log</jvm.args.gc.log.path>
 		<jvm.args.print.gc.details>-XX:+PrintGCDetails</jvm.args.print.gc.details>
 		<jvm.args.print.gc.date.stamps>-XX:+PrintGCDateStamps</jvm.args.print.gc.date.stamps>
 		<jvm.args.gc.log.file.rotation>-XX:+UseGCLogFileRotation</jvm.args.gc.log.file.rotation>
